# SIVAP

./: .gitignore
backend/: app.py  churners.py  partial.py  pyproject.toml  sivap.py
backend/aaaaa/: deneme.py  göksundneme.py  kaan.py  xg.py
backend/aaaaa/excels/: test_db.xlsx  testt.xlsx  yeni.xlsx
backend/aaaaa/fameo/: Yeni-Eski Renewal.xlsx  comparison.xlsx  customer_probabilities_and_classes.xlsx  logistic_regression_coefficients.xlsx
backend/fixedFiles/: base_profile.xlsx  comparison.xlsx  customer_probabilities_and_classes.xlsx
backend/processed/: TESTE_HAZIRLIK_ONCESI_SON.xlsx  adjusted_contracts_with_cpi.xlsx  customer_probabilities_and_classes.xlsx  logistic_regression_coefficients.xlsx  test_db.xlsx
backend/processed/excel_files/: customer_probabilities_and_classes.xlsx  logistic_regression_coefficients.xlsx
backend/uploads/: Effect_iptal_listesi.xls  Effect_musteriler.xls  Effect_uyelik_sozlesmeleri.xls  TESTE_HAZIRLIK_ONCESI_SON.xlsx
backend/uploads/aktivite_raporlari/: aktivite rap_07-12_2024.xlsx  aktivite rap_2019.xlsx  aktivite rap_2020.xlsx
backend/uploads/giris_cikis_verileri/: girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_01.2020.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_01.2021.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_01.2022.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_01.2023.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_01.2024.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_02.2020.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_02.2021.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_02.2022.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_02.2023.xlsx  girisŌņįT¦ sayŌöĒŌūĘlarŌöĒŌūĘ_02.2024.xlsx  (+50 more)
frontend/: .gitignore  (+2 more)
(+14 files in other folders)
