[project]
name = "backend"
version = "0.1.0"
requires-python = "==3.10.12"

dependencies = [
    "fastapi[standard]>=0.115.12",
    "imbalanced-learn>=0.13.0",
    "ipython>=8.34.0",
    "keras-tuner>=1.4.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
    "uvicorn>=0.34.0",
    "xgboost>=3.0.0",
    "xlrd>=2.0.1",
]
